feat: use new codeSearch tool to read SDK snippets for code completions (#3581)
