# packages/fai-sdk/src/api/types/ReferenceSnippet.ts
@@ -1,16 +1,0 @@
-/**
- * This file was auto-generated by Fern from our API Definition.
- */
-
-export interface ReferenceSnippet {
-    /** The header of the method or function, e.g., 'def foo(bar):' */
-    method_header: string;
-    /** The language of the code snippet */
-    language?: string;
-    /** A description of what the method does */
-    description?: string;
-    /** A code snippet showing how to use the method */
-    usage?: string;
-    /** A list of parameter names for the method */
-    parameters?: string[];
-}
