# packages/fai-sdk/src/api/types/index.ts
@@ -1,4 +1,5 @@
 export * from "./ChatMessage.js";
+export * from "./CodeIndexStatusResponse.js";
 export * from "./Conversation.js";
 export * from "./ConversationTurn.js";
 export * from "./ConversationTurnFeedback.js";
@@ -25,6 +26,7 @@ export * from "./GroupBy.js";
 export * from "./Guidance.js";
 export * from "./HttpValidationError.js";
 export * from "./HistogramAnalyticsBar.js";
+export * from "./IndexResponse.js";
 export * from "./InsightExample.js";
 export * from "./InsightWithMetadata.js";
 export * from "./JobStatusResponse.js";
@@ -33,7 +35,6 @@ export * from "./PaginationResponse.js";
 export * from "./PostChatCompletionResponse.js";
 export * from "./Query.js";
 export * from "./ReconstructIndexResponse.js";
-export * from "./ReferenceSnippet.js";
 export * from "./SyncIndexResponse.js";
 export * from "./UpdateDocumentResponse.js";
 export * from "./UpdateGuidanceResponse.js";
